--- a/index.html
+++ b/index.html
@@ -3,7 +3,98 @@
 	<head>
 		<title>Tea Cozy</title>
 	</head>
+	
 	<body>
+
+		<!-- Header Section -->
+
+		<header>
+			<img src="resources/images/logo.png">
+			<nav>
+				<span><a href="#mission">Mission</a></span>
+				<span><a href="#featured">Featured Tea</a></span>
+				<span><a href="#locations">Locations</a></span>
+			</nav>
+		</header>
+
+		<!-- Main Content -->
+
+		<div class="main">
+
+			<!-- Mission Section -->
+
+			<div id="mission">
+				<h2>Our Mission</h2>
+				<h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+			</div>
+
+			<!-- Feature Section -->
+
+			<div id="featured">
+				<div class="title">
+					<h2>Tea of the Month</h2>
+					<h4>What's Steeping at The Tea Cozy?</h4>
+				</div>
+				<div class="tea">
+					<img src="resources/images/berry.jpg">
+					<h4>Fall Berry Blitz Tea</h4>
+				</div>
+				<div class="tea">
+					<img src="resources/images/spiced.jpg">
+					<h4>Spiced Rum Tea</h4>
+				</div>
+				<div class="tea">
+					<img src="resources/images/donut.jpg">
+					<h4>Seasonal Donuts</h4>
+				</div>
+				<div class="tea">
+					<img src="resources/images/myrtle.jpg">
+					<h4>Myrtle Ave Tea</h4>
+				</div>
+				<div class="tea">
+					<img src="resources/images/bedford.jpg">
+					<h4>Bedford Bizarra Tea</h4>
+				</div>
+			</div>
+
+			<!-- Location Section -->
+
+			<div id="locations">
+				<div class="title">
+					<h2>Locations</h2>
+				</div>
+				<div class="address">
+					<h3>Downtown</h3>
+					<p>384 West 4th St</p>
+					<p>Suite 108</p>
+					<p>Portland, Maine</p>
+				</div>
+				<div class="address">
+					<h3>East Bayside</h3>
+					<p>3433 Phisherman's Avenue</p>
+					<p>(Northwest Corner)</p>
+					<p>Portland, Maine</p>
+				</div>
+				<div class="address">
+					<h3>Oakdale</h3>
+					<p>515 Crescent Avenue</p>
+					<p>Second Floor</p>
+					<p>Portland, Maine</p>
+				</div>
+			</div>
+
+		</div>
+
+		<!-- Footer Section -->
+
+		<footer>
+			<div class="contact">
+				<h2>The Tea Cozy</h2>
+				<h5>contact@theteacozy.com</h5>
+				<p>917-555-8904</p>
+			</div>
+			<p>&copy; The Tea Cozy 2017</p>
+		</footer>
 
 	</body>
 </html>
