--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Tea Cozy</title>
+		<link rel="stylesheet" type="text/css" href="resources/css/style.css">
 	</head>
 	
 	<body>
@@ -24,8 +25,8 @@
 			<!-- Mission Section -->
 
 			<div id="mission">
-				<h2>Our Mission</h2>
-				<h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+					<h2>Our Mission</h2>
+					<h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
 			</div>
 
 			<!-- Feature Section -->
@@ -91,7 +92,7 @@
 			<div class="contact">
 				<h2>The Tea Cozy</h2>
 				<h5>contact@theteacozy.com</h5>
-				<p>917-555-8904</p>
+				<h5>917-555-8904</h5>
 			</div>
 			<p>&copy; The Tea Cozy 2017</p>
 		</footer>
