finish locations section and footer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				</div>
 				<div class="tea">
 					<img src="resources/images/bedford.jpg">
-					<h4>Bedford Bizarra Tea</h4>
+					<h4>Bedford Bizarre Tea</h4>
 				</div>
 			</div>
 
